refactor: Remove deprecated files and clean up project structure